--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
     <div class="unshake" id="div6" style = "background-color: #18185c; justify-content: center; align-items: center; padding-top: 65px; height: 260px">
       <h1 class="mission" style ="color:white">
-        Join the effort in combatting injustice against Dalits. Contact us for any questions.
+        Join the effort in combatting injustice against Dalits. Comment below for feedback.
       </h1>
       <form
         action="mailto:hardik.sethia@oberoi-is.net?subject=I%20have%20a%20question"
