--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         Join the effort in combatting injustice against Dalits. Comment below for feedback.
       </h1>
       <form
-        action="mailto:hardik.sethia@oberoi-is.net?subject=I%20have%20a%20question"
+        action="mailto:dalitsorgindia@gmail.com?subject=I%20have%20a%20question"
         method="post"
         enctype="text/plain"
         placeholder="Contact"
